--- a/assistant_director/src/_styles/main.css
+++ b/assistant_director/src/_styles/main.css
@@ -1,3 +1,10 @@
+.App-header {
+    background-color: #222;
+    height: 50px;
+    padding: 20px;
+    color: white;
+}
+
 .container {
     width: 85%;
     margin: auto;
