starts to style app

--- a/assistant_director/src/_styles/main.css
+++ b/assistant_director/src/_styles/main.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 .App-header {
     background-color: #222;
     height: 50px;
@@ -5,19 +9,71 @@
     color: white;
 }
 
+body {
+    background: rgba(155, 155, 155, .6);
+}
+
+.homePage {
+    background: #DEDBD3;
+    width: 95%;
+    margin: 0 auto;
+}
+
 .container {
-    width: 85%;
     margin: auto;
+    background: blue;
+}
+
+.locations {
+    background: green;
+    padding: 5px 10px;
+    text-align: center;
+}
+
+.location {
+    width: 48%;
+    margin: 1%;
+    display: inline-block;
+    background: white;
+}
+
+.location .heading {
+    padding-top: 1px;
+}
+
+.location h3 {
+    padding-bottom: 15px;
+}
+
+.gryffindor .heading {
+    background: #BA2811;
+    color: goldenrod;
+}
+
+.slytherin .heading {
+    background: #00732F;
+    color: silver;
+}
+
+.hufflepuff .heading {
+    background: #F4BA00;
+    color: #000;
+}
+
+.ravenclaw .heading {
+    background: #004D81;
+    color: #cd7f32
+}
+
+button {
+    background: white;
+    color: black;
+    border: none;
+    border-radius: 4px;
+    box-shadow: 0px 0px 1px 0 black;
 }
 
 span.link {
     color: green;
     text-decoration: none;
-}
-
-li {
-    list-style: none;
-    display: inline-block;
-    margin: 10px;
-    padding: 10px 25px;
 }
