--- a/assistant_director/src/_styles/main.css
+++ b/assistant_director/src/_styles/main.css
@@ -20,6 +20,10 @@ body {
     margin: 0 auto;
 }
 
+.landing {
+    text-align: center;
+}
+
 .container {
     margin: auto;
     background: #212221;
